@@ -1,3 +1,8 @@
+2009-11-01  Doug Evans  <dje@sebabeach.org>
+
+	* rtl-traverse.scm (/rtx-canon): Issue better error message for
+	invalid rtx function names.
+
 2009-10-28  Doug Evans  <dje@sebabeach.org>
 
 	* cos.scm (object-assign!): New function.
